# Training-Y21

./: 210385_Gaurav.docx  210629  210775.md.txt  211107_Tejas_Software.md  <Monika_kumari>electrical.md  AUV Electrical Assignment Dhruv Misra.brd  Ass1.md  Assignment 1_210108  Assignment1.md  Electrical.md  Force Sensor on LCD AUV.brd  Knob circuit AUV.brd  KunaalGautam_Part1 v1.step  KunaalGautam_Part2 v1.step  Kunaal_Electrical.md  New Text Document.txt  Omkar_Electrical.md  Q.3 Temperature sensor data on LCD.brd  Q3 .brd  Q4. Servo motor controller (with potentiometer).brd  Q4.brd  README.md  Rajit Tiwari__210818  Readme (electrical).md  Readme.md  Readme.txt  SERVOMOTER.brd  SHASHIKANT.md  Shashank_Electrical Task3  Shashikant_Yadav_Electrical.md  Sweep Servo Motor AUV.brd  TASK-3 TARUN.md  TEMP MEASURE.brd  sensor.txt  servo.txt  tinkercad list.txt
200028/: README.md
210020/: README.md
210020/src/Math_pack/: CMakeLists.txt
210020/src/Math_pack/MSG/: PACKAGE.xml
210020/src/Math_pack/cpp_files/: Adding.cpp  Publisher_(output).cpp  subscriber_(input).cpp
210093_Akshat/: Readme.md
210108/: README.md.md
210108/Aman _210108_electrical/: readme.md
210109/: README.md  ReadMe copy.md
210109/src/math/: CMakeLists.txt  package.xml
210109/src/math/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  input_node.cpp  output_node.cpp
210253 Aryan Bachhav/: README.md
210273/: README.md
210280_omkar/: README.md
210286/: readme.md
210286/chinmayAmrutkar_Electrical/: Brilliant Amur.brd  Magnificent Leelo.brd  readme.md
210319/: README.md
210341/: README.md
210385 Gaurav/: readme
210385_Gaurav/: Q3 force sensor with LED.brd  Q4 servomotor rotation.brd  README.md
210507/: README.md
210558/: readme.md
210684/: README.md
210684/Om_Shivam_Verma_electrical/: README.md  Task-2-Circuit.brd  Task-3-Circuit.brd  Task-4-Circuit.brd
210833/: README.md
210901/: README.md
210901/Electrical/: readme.md
210901/Electrical Assignment-1/: readme.md
210901/Mechanical/: README.md
210901/Mechanical Assignment-1/: README.md
210901/Software/: README.md
210901/Software Assignment-1/: readme.md
210917/: README.md
210928/: README.md
210928/Sanyam_Jain_Electrical/: Force Sensor.txt  Servo Motor.txt  Timer.txt
210966/: README.md  Shashikant_Yadav_Electrical.md
210983/: README.md  Readme.md
210983/src/math/: CMakeLists.txt  package.xml
210983/src/math/msg/: number.msg
210983/src/math/src/: add_two_numbers_server.cpp  input_node.cpp  output_node.cpp
210983/src/math/srv/: add_two_numbers.srv
211073_SUMIT/: readme.md
211102/: README.md
211107/: Readme.md
AbirRajbonghsi_Electrical/: AbirRajbongshi_electrical.md  Servo motor.brd  Temperature sensor.brd
Ass1_Electrical/: AayushGupta_Electrical.md
DevabrataBothra_Electrical/: README.md
Dhruv Misra_Electrical/: Links to BRD files for Electrical Submission
Kriti_Electrical/: Force_Sensor.brd  Servomotor.brd  binary.brd  electrical.md
Mohak_Electrical/: Force_Sensor.brd  Mohak_electrical.md  Servo_motor.brd
Omkar_Electrical/: Omkar_Electrical.md  Q.4 Servo motor control(without potentiometer) .brd
Ravi kumar_Electrical/: readme.md
Samyak Singhania_electrical/: Samyak Singhania_Electrical.md
ShivamSharma_Electrical/: README.md  Task 2.brd  Task 3.brd  Task 4.brd
Shubh Jain_211018/: ShubhJain_211018_assignment1_readme readme.md  ShubhJain_Electrical.md
Shubh Jain_211018/Assignment 3/: 7-Segment display and 74hc93.brd  7-Segment display.brd  Servo motor.brd  Temperature sensor.brd
Sumay_211071/: 211071.md.txt
Sumit_Electrical.md/: tinker cad link.txt
VEDANT - 211156/src/: README.md
Vedant-211156/: README.md  Vedant_electrical.md  servo_motor.brd  temp_sensor.brd
git auv/: 210581.pages  210581_manasvi_electrical.pages
git auv/git auv/: new.md
lakshya_electrical/: readme.md
src/: README.md
src/demo-gazebo/: CMakeLists.txt  package.xml
src/demo_gazebo/: CMakeLists.txt  package.xml
(+103 files in other folders)
